[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="1_gameover"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_gameover")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="Title" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "LIGHTHOUSE FELL"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NightLabel" type="Label" parent="Control/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Night Reached: 0"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="Control/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="ResourcesLabel" type="Label" parent="Control/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Resources Gathered: 0"
horizontal_alignment = 1

[node name="TokensLabel" type="Label" parent="Control/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Keeper Tokens: +0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="RetryButton" type="Button" parent="Control/Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(35, 14)
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Retry"

[node name="QuitButton" type="Button" parent="Control/Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(35, 14)
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Quit"
